--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google-site-verification" content="S4is4_SZkAweqO84CZS2o2iOO5eK0gAenPy4RZUp3Yk" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="theme-color" content="#050505" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
